alterações container, fontes e widget
criação de um col-md-10 dentro do container, diminuição nas fontes do
texto em geral e nos h, espaçamento entre os widgets

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,34 @@
 
 body{
 	background: linear-gradient(#09335D, #4478AA);
+    font-size: 12px;
 }
 
-.main-container{
+.h5, h5 {
+    font-size: 13px;
+}
+
+.h4, h4 {
+    font-size: 15px;
+}
+
+.h3, h3 {
+    font-size: 17px;
+}
+
+.h2, h2 {
+    font-size: 22px;
+}
+
+.h1, h1 {
+    font-size: 30px;
+}
+
+.siteArea{
 	background: #FFFFCC;
 }
+
+
 
 h4.m-title a {
     color: #003366;
@@ -81,6 +104,11 @@ h3.main-title.col-md-12 {
 }
 
 h3.main-title.col-md-12 {
+    margin-top: 0;
+}
+
+h4.main-title.col-md-12 {
+    padding: 10px;
     margin-top: 0;
 }
 
