transformar o footer em row

--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ ul.sub-menu {
     font-size: 11px;
 }
 
-footer.footer.col-md-12 {
+footer{
     background: #c3b170;
     padding: 10px 0;
     text-align: center;
