alterar cor e expessura da borda

--- a/style.css
+++ b/style.css
@@ -305,7 +305,7 @@ nav.navbar.navbar-default.center-block {
 
 nav.navbar.navbar-default.menu-barra {
     margin-bottom: 0;
-    border: solid 4px #717171;
+    border: solid 2px #c0aa3e;
     border-radius: 0;
 }
 
